- Refactor repositories to support database operations

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# MAX_NUMBER_OF_PROJECTS
-# MAX_NUMBER_OF_TASKS
-# MAX_PROJECT_NAME_LENGTH
-# MAX_PROJECT_DESCRIPTION_LENGTH
-# MAX_TASK_TITLE_LENGTH
-# MAX_TASK_DESCRIPTION_LENGTH
+#MAX_NUMBER_OF_PROJECTS
+#MAX_NUMBER_OF_TASKS
+#MAX_PROJECT_NAME_LENGTH
+#MAX_PROJECT_DESCRIPTION_LENGTH
+#MAX_TASK_NAME_LENGTH
+#MAX_TASK_DESCRIPTION_LENGTH
