feat(persistency): Implement RDB persistence using SQLAlchemy/PostgreSQL

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@
 #MAX_PROJECT_DESCRIPTION_LENGTH
 #MAX_TASK_NAME_LENGTH
 #MAX_TASK_DESCRIPTION_LENGTH
+DATABASE_URL=postgresql://user:password@localhost:5432/todolist_db
