--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,8 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql://postgres:10203151000m@localhost:5432/todolist_db
+
+#sqlalchemy.url = postgresql://user:password@localhost:5432/todolist_db
 
 
 [post_write_hooks]
